--- a/src/components/modal/chef/QuizMakeMult.module.css
+++ b/src/components/modal/chef/QuizMakeMult.module.css
@@ -18,9 +18,10 @@
   border-radius: 50px;
   max-width: 420px;
   width: 80%;
-  height: 60%;
+  height: 55%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   text-align: center;
 }
 
@@ -70,7 +71,6 @@
   align-items: center;
   gap: 10px;
 }
-
 .QuestionContent input{
   border: none;
   font-size: 15px;
@@ -82,9 +82,21 @@
   background-color: #D9D9D9;
 }
 
+.choices{
+
+  display: flex;
+  gap: 40px;
+  margin-top: 20px;
+  justify-content: center;
+}
+.choices button{
+  border-radius: 30px;
+  border: none;
+  height:120px;
+  width: 120px;
+}
 .nextButton {
-  position: fixed;
-  margin-top: 150px;
+  margin-top:10px;
   padding: 10px 20px;
   background-color: #03526B;
   color: white;
@@ -95,36 +107,15 @@
 }
 
 .selected {
-  border: 5px solid #03E266 !important;
-  border-radius: 10px;
+  border: 3px solid #03E266 !important;
 }
 
-.choiceInput{
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  border: none;
-}
-.choiceWrapper {
-  height: 40px;
+/* 라디오 버튼 감싸는 스타일 */
+.radioWrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
-  gap: 20px;
+  margin-top: 5px;
+  gap: 150px;
 }
 
-
-.addButton {
-  height: 40px;
-  margin-top: 10px;
-  background-color: white;
-  color: black;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  width: 80%;
-  margin-left: 10%;
-  background: rgba(255, 255, 255, 0.5);
-
-}
