--- a/src/components/modal/chef/QuizMakeMult.module.css
+++ b/src/components/modal/chef/QuizMakeMult.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-
+  
   background: rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: center;
@@ -24,12 +24,61 @@
   text-align: center;
 }
 
+
+.top{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-right: 20px;
+}
+
+.top button{
+  margin-right: 75px;
+}
+.top label{
+  margin-right: 60px;
+  color:#FFFFFF;
+  font-size: 20px;
+}
+.back {
+  background: none;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+
+
+
+
+.bottomWrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+.QuestionContent 
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 10px;
 }
+
 .QuestionContent input{
   border: none;
   font-size: 15px;
+  width: 100%;
+  height: 150px;
+  border-radius: 20px;
+  padding: 10px;
+  margin-top: 10px;
   background-color: #D9D9D9;
 }
 
@@ -39,6 +88,10 @@
   padding: 10px 20px;
   background-color: #03526B;
   color: white;
+  border: none;
+  border-radius: 40px;
+  cursor: pointer;
+  width: 100px;
 }
 
 .selected {
@@ -61,6 +114,7 @@
   gap: 20px;
 }
 
+
 .addButton {
   height: 40px;
   margin-top: 10px;
@@ -72,4 +126,5 @@
   width: 80%;
   margin-left: 10%;
   background: rgba(255, 255, 255, 0.5);
+
 }
