--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
 
-.App{
-    text-align: center;
+body {
+    margin: 0;
+    padding: 0;
     font-family: 'Do Hyeon';
-}
-
+  }
 
